# mdns-discovery-handler

./: Cargo.toml  Dockerfile.discovery-handler  LICENSE  README.md
src/: discovery_handler.rs  main.rs
