[package]
name = "mdns-discovery-handler"
version = "0.1.0"
authors = ["Nicolas Belouin <nicolas.belouin@suse.com>"]
edition = "2018"

[dependencies]
# TODO: Change this to Akri main when the library is merged
akri-discovery-utils = { git = "https://github.com/project-akri/akri", branch = "main", package = "akri-discovery-utils" }
async-trait = "0.1.0"
env_logger = "0.10.0"
log = "0.4"
mdns-sd = "0.10.4"
serde = "1.0.190"
tokio = { version = "1.0", features = ["time", "net", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["tls"] }
